--- a/.env
+++ b/.env
@@ -12,5 +12,5 @@ DATABASE_HOST=localhost
 DATABASE_PORT=5432
 
 # EMAIL
-EMAIL_ID=
-EMAIL_PASSWORD=
+EMAIL_ID=projectspython18@gmail.com
+EMAIL_PASSWORD=ywzb lstu gefs nmzi
